[package]
name = "mmtk_v8"
version = "0.15.0"
authors = [" <>"]
rust-version = "1.57.0"

[lib]
name = "mmtk_v8"
# be careful - LTO is only allowed for certain crate types
crate-type = ["cdylib"]

[profile.release]
lto = true

[package.metadata.v8]
v8_version = "191b637f28c0e2c6ca5f2d6ac89377039a754337"
depot_tools_version = "b674278ce71b2ee683b8b0c98c9a64152988ecdb"

[dependencies]
libc = "0.2"
lazy_static = "1.1"
log = "*"

# Be very careful to commit any changes to the following mmtk dependency, as our CI scripts (including mmtk-core CI)
# rely on matching these lines to modify them: e.g. comment out the git dependency and use the local path.
# These changes are safe:
# - change branch
# - change repo name
# But other changes including adding/removing whitespaces in commented lines may break the CI.
# mmtk = { git = "https://github.com/mmtk/mmtk-core.git", rev = "2300ce1d4a7c99053c5bb7055b377a71c9241e85" }
# Uncomment the following and fix the path to mmtk-core to build locally
mmtk = { path = "../../mmtk-core" }

[features]
default = []
