[package]
name = "mmtk_v8"
version = "0.18.0"
authors = [" <>"]
rust-version = "1.71.1"

[lib]
name = "mmtk_v8"
# be careful - LTO is only allowed for certain crate types
crate-type = ["cdylib"]

[profile.release]
lto = true

[package.metadata.v8]
v8_version = "191b637f28c0e2c6ca5f2d6ac89377039a754337"
depot_tools_version = "d579cbcbc257d93f16334163c9816e4e581b7be2"

[dependencies]
libc = "0.2"
lazy_static = "1.1"
log = "*"

# Be very careful to commit any changes to the following mmtk dependency, as our CI scripts (including mmtk-core CI)
# rely on matching these lines to modify them: e.g. comment out the git dependency and use the local path.
# These changes are safe:
# - change branch
# - change repo name
# But other changes including adding/removing whitespaces in commented lines may break the CI.
mmtk = { git = "https://github.com/mmtk/mmtk-core.git", rev = "ac80c8de8ac551959839dfaa79e87c1a05a9e89c" }
# Uncomment the following and fix the path to mmtk-core to build locally
# mmtk = { path = "../repos/mmtk-core" }

[features]
default = ["mmtk/code_space", "mmtk/ro_space", "mmtk/exec_permission_on_all_spaces"]
nogc = []
