# Build arguments go here.
# See "gn args <out_dir> --list" for available build arguments.
#
declare_args() {
    the_root = getenv("THE_ROOT")
}

is_component_build = true
is_debug = true
symbol_level = 2
target_cpu = "x64"
use_goma = false
v8_enable_backtrace = true
v8_enable_fast_mksnapshot = true
v8_enable_verify_csa = true
v8_enable_slow_dchecks = false
v8_optimized_debug = false
# If we enable external code space, this error shows up.
# ERROR at //BUILD.gn:560:1: Assertion failed.
# assert(!v8_enable_external_code_space || v8_enable_pointer_compression,
# ^-----
# External code space feature requires pointer compression
v8_enable_external_code_space = false

v8_enable_third_party_heap = true
v8_third_party_heap_files = [
    "$the_root/v8/third_party/heap/mmtk/mmtk.cc",
    "$the_root/v8/third_party/heap/mmtk/mmtk.h",
    "$the_root/v8/third_party/heap/mmtk/mmtkUpcalls.h",
    "$the_root/v8/third_party/heap/mmtk/mmtkUpcalls.cc"
]
v8_third_party_heap_libs = [ "$the_root/mmtk/target/x86_64-unknown-linux-gnu/debug/libmmtk_v8.so" ]
